Reserve scrollbar gutter to avoid shifting background image

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /* fonts: roboto, space mono */
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   min-height: 100vh;
   background-color: black;
